<resources>
    <string name="app_name">virtualcar</string>
    <string name="config_virtualcardevice_name">VirtualCar IMS Settings</string>

    <string name="pref_log_level_key" translatable="false">loglevel</string>
    <string name="pref_log_level_summary">Select log items</string>
    <string name="pref_log_level">Log output target</string>
    <string-array name="pref_log_level_list_title">
        <item>IMS I/F Device log(DeviceConnector)</item>
        <item>IMS I/F IMS log(IfLinkConnector)</item>
        <item>Micro Service device log</item>
        <item>Micro Service IMS log</item>
    </string-array>
    <string-array name="pref_log_level_list_values">
        <item>IFLINK-CONNECTOR</item>
        <item>DEVICE-CONNECTOR</item>
        <item>CUSTOM-DEV</item>
        <item>CUSTOM-IMS</item>
    </string-array>

    <string name="pref_virtualcardevice_settings_parameter_name">"virtualcar parameter"</string>
    <string name="pref_virtualcardevice_settings_parameter_key">"virtualcar_param_key"</string>
    <string name="pref_virtualcardevice_settings_parameter_summary">"parameter description"</string>

    <string name="pref_virtualcardevice_settings_parameter_default">"1"</string>
    <!--user name-->
    <string name="pref_virtualcardevice_settings_username_name">"Virtual Car user name"</string>
    <string name="pref_virtualcardevice_settings_username_key">"virtualcar_param_username"</string>
    <string name="pref_virtualcardevice_settings_username_summary">"user name for Mobility IoT simulator"</string>
    <!--password-->
    <string name="pref_virtualcardevice_settings_password_name">"Virtual Car password"</string>
    <string name="pref_virtualcardevice_settings_password_key">"virtualcar_param_password"</string>
    <string name="pref_virtualcardevice_settings_password_summary">"password for Mobility IoT simulator"</string>
    <!--vehicle id-->
    <string name="pref_virtualcardevice_settings_vehicle_id_name">"Virtual Car vehicle ID"</string>
    <string name="pref_virtualcardevice_settings_vehicle_id_key">"virtualcar_param_vehicle_id"</string>
    <string name="pref_virtualcardevice_settings_vehicle_id_summary">"vehicle ID for Mobility IoT simulator"</string>
</resources>
